src/test/deca/syntax/invalid/resultats/test10_float-synt.res
./src/test/deca/syntax/invalid/test10_float.deca:16:11: no viable alternative at input 'e'
